welcome.lessons.welcome.summative.Moria.scala.error
DwarfCode:18: error: illegal start of simple expression
  }
  ^DwarfCode:19: error: 'while' expected but identifier found.
  prendBiscuit()
  ^DwarfCode:20: error: '(' expected but ';' found.
  retourne()
^